--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,20 @@
+
 plugins {
     id 'org.springframework.boot' version '2.3.3.RELEASE'
     id 'io.spring.dependency-management' version '1.0.10.RELEASE'
     id 'java'
+    id "org.flywaydb.flyway" version "6.5.5"
 }
 
 group = 'com.liyuan'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
+
+//flyway {
+//    url = 'jdbc:h2:E:/h2_db/community'
+//    user = 'sa'
+//    password=123456
+//}
 
 allprojects {
     repositories {
