--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,13 +2,9 @@ server.port=8887
 
 github.client.id=fc1c67c6cacce2033081
 github.client.secret=3cd23807d0bdca65ad3a97c6224a47f2676c9889
-github.redirect.uri=http://192.168.50.33:8887/callback
+github.redirect.uri=http://localhost:8887/callback
 
 spring.datasource.name=sa
 spring.datasource.password=123456
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:E:/h2_db/community
-
-spring.flyway.user=sa
-spring.flyway.password=123456
-spring.flyway.url=jdbc:h2:E:/h2_db/community
