--- a/build.gradle
+++ b/build.gradle
@@ -10,11 +10,11 @@ group = 'com.liyuan'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
 
-//flyway {
-//    url = 'jdbc:h2:E:/h2_db/community'
-//    user = 'sa'
-//    password=123456
-//}
+flyway {
+    url = 'jdbc:h2:E:/h2_db/community'
+    user = 'sa'
+    password=123456
+}
 
 allprojects {
     repositories {
