--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.0.10.RELEASE'
     id 'java'
     id "org.flywaydb.flyway" version "6.5.5"
+    id "io.freefair.lombok" version "5.2.1"
 }
 
 group = 'com.liyuan'
