--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.datasource.name=sa
 spring.datasource.password=123456
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:E:/h2_db/community
+
+mybatis.configuration.map-underscore-to-camel-case=true
