--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,8 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:E:/h2_db/community
 
 mybatis.configuration.map-underscore-to-camel-case=true
+
+spring.devtools.restart.enabled=true
+spring.devtools.restart.log-condition-evaluation-delta=false
+
+spring.thymeleaf.cache=false
