--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,4 +14,7 @@ mybatis.configuration.map-underscore-to-camel-case=true
 spring.devtools.restart.enabled=true
 spring.devtools.restart.log-condition-evaluation-delta=false
 
+spring.mvc.static-path-pattern=/static/**
+spring.resources.static-locations= classpath:static/
+
 spring.thymeleaf.cache=false
