--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,8 @@ allprojects {
 }
 
 dependencies {
+    // https://mvnrepository.com/artifact/org.mybatis.generator/mybatis-generator-core
+    implementation group: 'org.mybatis.generator', name: 'mybatis-generator-core', version: '1.4.0'
     // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-jdbc
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-jdbc', version: '2.3.3.RELEASE'
     // https://mvnrepository.com/artifact/org.mybatis.spring.boot/mybatis-spring-boot-starter
