--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,10 +4,10 @@ github.client.id=fc1c67c6cacce2033081
 github.client.secret=3cd23807d0bdca65ad3a97c6224a47f2676c9889
 github.redirect.uri=http://localhost:8887/callback
 
-spring.datasource.name=sa
-spring.datasource.password=123456
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:E:/h2_db/community
+spring.datasource.username=liyuan
+spring.datasource.password=ly5623071
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://192.168.50.201:3306/community?useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC&useSSL=false
 
 mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.type-aliases-package=com.liyuan.community.model
