--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,5 @@ spring.mvc.static-path-pattern=/static/**
 spring.resources.static-locations= classpath:static/
 
 spring.thymeleaf.cache=false
+
+server.undertow.accesslog.enabled=false
