--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ allprojects {
 }
 
 dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-undertow'
     // https://mvnrepository.com/artifact/mysql/mysql-connector-java
     implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.16'
     // https://mvnrepository.com/artifact/org.mybatis.generator/mybatis-generator-core
@@ -39,7 +40,9 @@ dependencies {
     implementation 'com.squareup.okhttp3:mockwebserver:4.9.0'
     // https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-thymeleaf
     implementation group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf', version: '2.3.3.RELEASE'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation ('org.springframework.boot:spring-boot-starter-web'){
+        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat'
+    }
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
